syntax = "proto3";

package search;

option go_package = "proto_search/";

service SearchRpc {
  rpc ProductStatusUp(ProductStatusUpRequest) returns (ProductStatusUpResponse);
}

message ProductStatusUpRequest {
  message Entity {
    message Attr {
      int64 attr_id = 1;
      string attr_name = 2;
      string attr_value = 3;
    }
    int64 sku_id = 1;
    int64 spu_id = 2;
    string sku_title = 3;
    double sku_price = 4;
    int64 sale_count = 5;
    bool has_stock = 6;
    int64 brand_id = 7;
    int64 catalog_id = 8;
    string brand_name = 9;
    string brand_img = 10;
    string catalog_name = 11;
    int64 hot_score = 12;
    repeated Attr attrs = 13;
  }
  repeated Entity entities = 13;
}

message ProductStatusUpResponse {}